@@ -303,27 +303,36 @@ verilog/pinorder.v:041: SIGNAL_DECL  'input' 'abcconst' '[2:0]' '' '' ''
 verilog/pinorder.v:042: SIGNAL_DECL  'input' 'noconnect' '[3:0]' '' 'signed' ''
 verilog/pinorder.v:043: SIGNAL_DECL  'input' 'def' '[31:0]' '' '' ''
 verilog/pinorder.v:044: ENDMODULE  'endmodule'
-verilog/parser_sv.v:002: MODULE  'module' 'times' undef '0'
-verilog/parser_sv.v:003: SIGNAL_DECL  'time' 'x' '' '' '' ''
-verilog/parser_sv.v:005: ENDMODULE  'endmodule'
-verilog/parser_sv.v:007: INTERFACE  'interface' 'itf'
-verilog/parser_sv.v:008: SIGNAL_DECL  'logic' 'blabla' '' '' '' ''
-verilog/parser_sv.v:009: SIGNAL_DECL  'logic' 'addr' '[7:0]' '' '' ''
-verilog/parser_sv.v:009: SIGNAL_DECL  'logic' 'data' '[7:0]' '' '' ''
-verilog/parser_sv.v:011: ENDINTERFACE  'endinterface'
-verilog/parser_sv.v:013: MODULE  'module' 'test' undef '0'
-verilog/parser_sv.v:016: SIGNAL_DECL  'input' 'clk' '' '' '' ''
-verilog/parser_sv.v:016: SIGNAL_DECL  'logic' 'clk' '' '' '' ''
-verilog/parser_sv.v:016: PORT  'clk'
-verilog/parser_sv.v:016: SIGNAL_DECL  'input' 'rst' '' '' '' ''
-verilog/parser_sv.v:016: SIGNAL_DECL  'logic' 'rst' '' '' '' ''
-verilog/parser_sv.v:016: PORT  'rst'
-verilog/parser_sv.v:017: SIGNAL_DECL  'input' 'd_in' '' '' '' ''
-verilog/parser_sv.v:017: SIGNAL_DECL  'logic' 'd_in' '' '' '' ''
-verilog/parser_sv.v:017: PORT  'd_in'
-verilog/parser_sv.v:018: SIGNAL_DECL  'output' 'd_out' '' '' '' ''
-verilog/parser_sv.v:018: SIGNAL_DECL  'logic' 'd_out' '' '' '' ''
-verilog/parser_sv.v:018: PORT  'd_out'
-verilog/parser_sv.v:021: SIGNAL_DECL  'logic' 'd_int' '' '' '' ''
-verilog/parser_sv.v:022: SIGNAL_DECL  'logic' 'data_' '[7:0]' '' '' ''
-verilog/parser_sv.v:040: ENDMODULE  'endmodule'
+verilog/parser_sv.v:001: PACKAGE  'package' 'mypackage'
+verilog/parser_sv.v:002: SIGNAL_DECL  'bit' 'pkg_addr' '[7:0]' '' '' ''
+verilog/parser_sv.v:003: SIGNAL_DECL  'bit' 'pkg_data' '[7:0]' '' '' ''
+verilog/parser_sv.v:004: ENDPACKAGE  'endpackage'
+verilog/parser_sv.v:006: MODULE  'module' 'times' undef '0'
+verilog/parser_sv.v:007: SIGNAL_DECL  'time' 'x' '' '' '' ''
+verilog/parser_sv.v:009: ENDMODULE  'endmodule'
+verilog/parser_sv.v:011: INTERFACE  'interface' 'itf'
+verilog/parser_sv.v:011: SIGNAL_DECL  'parameter' 'num_of_cli' '' '' '' '0'
+verilog/parser_sv.v:012: SIGNAL_DECL  'logic' 'blabla' '' '' '' ''
+verilog/parser_sv.v:013: SIGNAL_DECL  'logic' 'addr' '[7:0]' '' '' ''
+verilog/parser_sv.v:013: SIGNAL_DECL  'logic' 'data' '[7:0]' '' '' ''
+verilog/parser_sv.v:015: ENDINTERFACE  'endinterface'
+verilog/parser_sv.v:017: MODULE  'module' 'test' undef '0'
+verilog/parser_sv.v:018: INSTANT  'itf' 'whole_int' ''
+verilog/parser_sv.v:018: PORT  'whole_int'
+verilog/parser_sv.v:019: INSTANT  'itf' '*' ''
+verilog/parser_sv.v:019: PORT  'test'
+verilog/parser_sv.v:020: SIGNAL_DECL  'input' 'clk' '' '' '' ''
+verilog/parser_sv.v:020: SIGNAL_DECL  'logic' 'clk' '' '' '' ''
+verilog/parser_sv.v:020: PORT  'clk'
+verilog/parser_sv.v:020: SIGNAL_DECL  'input' 'rst' '' '' '' ''
+verilog/parser_sv.v:020: SIGNAL_DECL  'logic' 'rst' '' '' '' ''
+verilog/parser_sv.v:020: PORT  'rst'
+verilog/parser_sv.v:021: SIGNAL_DECL  'input' 'd_in' '' '' '' ''
+verilog/parser_sv.v:021: SIGNAL_DECL  'logic' 'd_in' '' '' '' ''
+verilog/parser_sv.v:021: PORT  'd_in'
+verilog/parser_sv.v:022: SIGNAL_DECL  'output' 'd_out' '' '' '' ''
+verilog/parser_sv.v:022: SIGNAL_DECL  'logic' 'd_out' '' '' '' ''
+verilog/parser_sv.v:022: PORT  'd_out'
+verilog/parser_sv.v:027: SIGNAL_DECL  'logic' 'd_int' '' '' '' ''
+verilog/parser_sv.v:028: SIGNAL_DECL  'logic' 'data_' '[7:0]' '' '' ''
+verilog/parser_sv.v:046: ENDMODULE  'endmodule'
